--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Kata</title>
   </head>
   <body>
-    <script src="Day_1_Kata_2.js"></script>
+    <script src="Kata_3.js"></script>
   </body>
 </html>
