--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Kata</title>
   </head>
   <body>
+    <h1>Check Console</h1>
+    <form action="# ">
+      <input type="text" name="name" id="name" placeholder="Name" />
+      <input type="text" name="class" id="class" placeholder="Class" />
+      <button>Submit</button>
+    </form>
+
+    <div class="display"></div>
     <script src="Kata_6.js"></script>
   </body>
 </html>
